<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".Edit">

    <!--    topic-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Course Registation"
            android:textColor="@color/headline"
            android:textSize="30dp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/subtext"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/subtext"
            android:ems="10"
            android:id="@+id/id"
            android:textAlignment="center"/>



    </LinearLayout>

    <!--    input name-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/subtext"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/subtext"
            android:ems="10"
            android:id="@+id/name"
            android:textAlignment="center"/>



    </LinearLayout>

    <!--    input course-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textColor="@color/subtext"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:id="@+id/course"
            android:textColor="@color/subtext"
            android:textAlignment="center"/>



    </LinearLayout>

    <!--    input fee-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/fee"
            android:textColor="@color/subtext"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:id="@+id/fee"
            android:textColor="@color/subtext"
            android:textAlignment="center"/>



    </LinearLayout>

    <!--    input fee-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt1"
            android:text="@string/edit"
            android:background="@color/button"
            android:layout_marginHorizontal="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt2"
            android:text="@string/delete"
            android:background="@color/button"
            android:layout_marginHorizontal="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt3"
            android:text="@string/back"
            android:background="@color/button"
            android:layout_marginHorizontal="20dp"
            />



    </LinearLayout>

</LinearLayout>